@@ -1,49 +1,73 @@
 package com.example.synergybackend.controller;
 
+import com.example.synergybackend.model.Background;
 import com.example.synergybackend.model.Choice;
 import com.example.synergybackend.model.Mcq;
-import com.example.synergybackend.model.Background;
-import com.example.synergybackend.repository.MCQRepository;
+import com.example.synergybackend.service.McqService;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.openMocks;
 
-
-@ExtendWith(MockitoExtension.class)
 class McqControllerTest {
 
     @Mock
-    private MCQRepository mockMcqRepo;
+    private McqService mockMcqService;
 
     @InjectMocks
     private McqController mcqControllerUnderTest;
 
+    private AutoCloseable mockitoCloseable;
+
+    @BeforeEach
+    void setUp() {
+        mockitoCloseable = openMocks(this);
+    }
+//close after each test
+    @AfterEach
+    void tearDown() throws Exception {
+        mockitoCloseable.close();
+    }
 
     @Test
-    void testGetAllMcq() {
+    void testGetMcqByUser() {
         // Setup
+        //create two mcq objects of a single googleid and see if both can be retrieved properly
 
+        // Configure McqService.getMcqByUser(...).
         final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
         mcq.setGoogleId("googleId");
         mcq.setId("id");
         mcq.setQuestion("question");
         mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq.setBg(new Background(1,"white","black"));
-        final List<Mcq> mcqs = List.of(mcq);
-        when(mockMcqRepo.findAll()).thenReturn(mcqs);
-        System.out.println(mcq);
+
+        final Mcq mcq1 = new Mcq();
+        mcq1.setBg(new Background(0, "bgColor", "textColor"));
+        mcq1.setType("type1");
+        mcq1.setGoogleId("googleId");
+        mcq1.setId("id1");
+        mcq1.setQuestion("question1");
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option1", 0))));
+        //list initialization
+        final List<Mcq> mcqs = List.of(mcq,mcq1);
+        when(mockMcqService.getMcqByUser("googleId")).thenReturn(mcqs);
+
         // Run the test
-        final List<Mcq> result = mcqControllerUnderTest.getAllMcq();
+        final List<Mcq> result = mcqControllerUnderTest.getMcqByUser("googleId");
 
         // Verify the results
         for(Mcq i :result)
@@ -51,66 +75,56 @@ class McqControllerTest {
     }
 
     @Test
-    void testGetAllMcq_MCQRepositoryReturnsNoItems() {
+    void testGetMcqById() {
         // Setup
-        when(mockMcqRepo.findAll()).thenReturn(Collections.emptyList());
+
+        // Configure McqService.getMcqById(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.getMcqById("id")).thenReturn(mcq);
 
         // Run the test
-        final List<Mcq> result = mcqControllerUnderTest.getAllMcq();
+        final Mcq result = mcqControllerUnderTest.getMcqById("id");
 
         // Verify the results
         System.out.println(result);
     }
 
-    @Test
-    void testGetMcqById() {
-        // Setup
-
-        
-        MockitoAnnotations.openMocks(this);
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        mockMcqRepo.save(any(Mcq.class));
-
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.getMcqById("id");
-        System.out.println(result);
-
-    }
 
     @Test
     void testSaveMcq() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
         quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        quest.setBg(new Background(1,"white","black"));
 
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
+        when(mockMcqService.saveMcq(any(Mcq.class))).thenReturn("MCQ/id");
 
         // Run the test
         final String result = mcqControllerUnderTest.saveMcq(quest);
-        System.out.println(result);
+
+        // Verify the results
+        assertEquals("MCQ/id", result);
+    }
+
+    @Test
+    void testSaveWithBg() {
+        // Setup
+        final Background quest = new Background(0, "bgColor", "textColor");
+        when(mockMcqService.saveWithBg(eq("id"), any(Background.class))).thenReturn("MCQ/id");
+
+        // Run the test
+        final String result = mcqControllerUnderTest.saveWithBg("id", quest);
+
         // Verify the results
         assertEquals("MCQ/id", result);
     }
@@ -119,63 +133,42 @@ class McqControllerTest {
     void testUpdateMcq() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 2))));
-        quest.setBg(new Background(1,"white","black"));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
-
-        // Configure MCQRepository.findById(...).
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq2 = new Mcq();
-        mcq2.setGoogleId("googleId");
-        mcq2.setId("id");
-        mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq2.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
+        // Configure McqService.updateMcq(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.updateMcq(eq("id"), any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateMcq("id", quest);
         ArrayList<Choice> c=result.getChoices();
         for(Choice i:c)
             System.out.println(i.getVotes());
-
-        
     }
 
     @Test
     void testSaveSC() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
         quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        quest.setBg(new Background(1,"white","black"));
 
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
+        when(mockMcqService.saveSC(any(Mcq.class))).thenReturn("SC/id");
 
         // Run the test
         final String result = mcqControllerUnderTest.saveSC(quest);
@@ -188,56 +181,58 @@ class McqControllerTest {
     void testUpdateSC() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
         quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        quest.setBg(new Background(1,"white","black"));
 
-
-    
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
-
-        final Mcq mcq2 = new Mcq();
-        mcq2.setGoogleId("googleId");
-        mcq2.setId("id");
-        mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq2.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
+        // Configure McqService.updateSC(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.updateSC(eq("id"), any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateSC("id", quest);
 
+    }
+
+    @Test
+    void testSaveWithB() {
+        // Setup
+        final Background quest = new Background(0, "bgColor", "textColor");
+        when(mockMcqService.saveWithB(eq("id"), any(Background.class))).thenReturn("SC/id");
+
+        // Run the test
+        final String result = mcqControllerUnderTest.saveWithB("id", quest);
+
         // Verify the results
+        assertEquals("SC/id", result);
     }
 
     @Test
     void testGetSC() {
         // Setup
 
-     
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
+        // Configure McqService.getSC(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.getSC("id")).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.getSC("id");
+
 
     }
 
@@ -245,21 +240,14 @@ class McqControllerTest {
     void testSaveRT() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
         quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        quest.setBg(new Background(1,"white","black"));
 
-      
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
+        when(mockMcqService.saveRT(any(Mcq.class))).thenReturn("RT/id");
 
         // Run the test
         final String result = mcqControllerUnderTest.saveRT(quest);
@@ -272,57 +260,57 @@ class McqControllerTest {
     void testUpdateRT() {
         // Setup
         final Mcq quest = new Mcq();
+        quest.setBg(new Background(0, "bgColor", "textColor"));
+        quest.setType("type");
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
         quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        quest.setBg(new Background(1,"white","black"));
 
-
-
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq2 = new Mcq();
-        mcq2.setGoogleId("googleId");
-        mcq2.setId("id");
-        mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq2.setBg(new Background(1,"white","black"));
-
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
+        // Configure McqService.updateRT(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.updateRT(eq("id"), any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateRT("id", quest);
 
+
+    }
+
+    @Test
+    void testSaveBg() {
+        // Setup
+        final Background quest = new Background(0, "bgColor", "textColor");
+        when(mockMcqService.saveBg(eq("id"), any(Background.class))).thenReturn("RT/id");
+
+        // Run the test
+        final String result = mcqControllerUnderTest.saveBg("id", quest);
+
+        // Verify the results
+        assertEquals("RT/id", result);
     }
 
     @Test
     void testGetRT() {
         // Setup
 
-    
-        final Mcq mcq1 = new Mcq();
-        mcq1.setGoogleId("googleId");
-        mcq1.setId("id");
-        mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
-        mcq1.setBg(new Background(1,"white","black"));
-
-        final Optional<Mcq> mcq = Optional.of(mcq1);
-        when(mockMcqRepo.findById("id")).thenReturn(mcq);
+        // Configure McqService.getRT(...).
+        final Mcq mcq = new Mcq();
+        mcq.setBg(new Background(0, "bgColor", "textColor"));
+        mcq.setType("type");
+        mcq.setGoogleId("googleId");
+        mcq.setId("id");
+        mcq.setQuestion("question");
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        when(mockMcqService.getRT("id")).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.getRT("id");
-
     }
-
 }
